# simple-eos-cmakebuilder

./: CMakeLists.txt
CMakeModules/: wasm.cmake
contracts/: CMakeLists.txt
